# react-typescript-tauri-startkit

./: README.md  craco.config.js  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
